# Gospel

./: Cargo.toml  README.md
gospel/: Cargo.toml
gospel-dump/: Cargo.toml
gospel-dump/src/: lib.rs
gospel/src/: dump.rs  lib.rs  read.rs  write.rs
src/: read.rs  write.rs
